@@ -43,5 +43,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="stock.move_view_list_shipment"/>
             <field name="name">stock_move_list</field>
         </record>
+
+        <record model="ir.ui.view" id="stock_inventory_line_view_form">
+            <field name="model">stock.inventory.line</field>
+            <field name="inherit" ref="stock.inventory_line_view_form"/>
+            <field name="name">stock_inventory_line_form</field>
+        </record>
+
+        <record model="ir.ui.view" id="stock_inventory_line_view_list">
+            <field name="model">stock.inventory.line</field>
+            <field name="inherit" ref="stock.inventory_line_view_list"/>
+            <field name="name">stock_inventory_line_list</field>
+        </record>
     </data>
 </tryton>
