@@ -1,3 +1,4 @@
+* Add place to inventory line
 
 Version 7.4.0 - 2024-11-04
 --------------------------
